clean up code after findbugs report
git-svn-id: https://irt-svn.stanford.edu/repos/irt/lane/laneweb/trunk@57192 c440208b-5602-0410-a095-92527a996296